--- a/storybook-mui-tryout/src/stories/SBHelloworld/Introduction.stories.mdx
+++ b/storybook-mui-tryout/src/stories/SBHelloworld/Introduction.stories.mdx
@@ -1,12 +1,12 @@
 import { Meta } from '@storybook/addon-docs/blocks';
-import Code from './assets/code-brackets.svg';
-import Colors from './assets/colors.svg';
-import Comments from './assets/comments.svg';
-import Direction from './assets/direction.svg';
-import Flow from './assets/flow.svg';
-import Plugin from './assets/plugin.svg';
-import Repo from './assets/repo.svg';
-import StackAlt from './assets/stackalt.svg';
+import Code from '../assets/code-brackets.svg';
+import Colors from '../assets/colors.svg';
+import Comments from '../assets/comments.svg';
+import Direction from '../assets/direction.svg';
+import Flow from '../assets/flow.svg';
+import Plugin from '../assets/plugin.svg';
+import Repo from '../assets/repo.svg';
+import StackAlt from '../assets/stackalt.svg';
 
 <Meta title="Example/Introduction" />
 
@@ -126,7 +126,10 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
 <div className="subheading">Configure</div>
 
 <div className="link-list">
-  <a className="link-item" href="https://storybook.js.org/docs/react/addons/addon-types" target="_blank">
+  <a
+    className="link-item"
+    href="https://storybook.js.org/docs/react/addons/addon-types"
+    target="_blank">
     <img src={Plugin} alt="plugin" />
     <span>
       <strong>Presets for popular tools</strong>
@@ -136,8 +139,7 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
   <a
     className="link-item"
     href="https://storybook.js.org/docs/react/configure/webpack"
-    target="_blank"
-  >
+    target="_blank">
     <img src={StackAlt} alt="Build" />
     <span>
       <strong>Build configuration</strong>
@@ -147,8 +149,7 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
   <a
     className="link-item"
     href="https://storybook.js.org/docs/react/configure/styling-and-css"
-    target="_blank"
-  >
+    target="_blank">
     <img src={Colors} alt="colors" />
     <span>
       <strong>Styling</strong>
@@ -158,8 +159,7 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
   <a
     className="link-item"
     href="https://storybook.js.org/docs/react/get-started/setup#configure-storybook-for-your-stack"
-    target="_blank"
-  >
+    target="_blank">
     <img src={Flow} alt="flow" />
     <span>
       <strong>Data</strong>
@@ -178,14 +178,20 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
       Configure, customize, and extend
     </span>
   </a>
-  <a className="link-item" href="https://www.learnstorybook.com" target="_blank">
+  <a
+    className="link-item"
+    href="https://www.learnstorybook.com"
+    target="_blank">
     <img src={Direction} alt="direction" />
     <span>
       <strong>In-depth guides</strong>
       Best practices from leading teams
     </span>
   </a>
-  <a className="link-item" href="https://github.com/storybookjs/storybook" target="_blank">
+  <a
+    className="link-item"
+    href="https://github.com/storybookjs/storybook"
+    target="_blank">
     <img src={Code} alt="code" />
     <span>
       <strong>GitHub project</strong>
